--- a/phase_3/week_2/3_28/basic_python_notes.ipynb
+++ b/phase_3/week_2/3_28/basic_python_notes.ipynb
@@ -220,24 +220,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the year is now 2023\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# look at me I'm dynamic\n",
+    "b = False\n",
+    "\n",
+    "x = 2000\n",
+    "y = 23\n",
+    "z = \"hello\"\n",
+    "a = \" world\"\n",
+    "\n",
+    "p = 3.14\n",
+    "e = 2.718\n",
+    "\n",
     "# try to solve these CONCEPTUAL questions WITHOUT PRINTING to gauge your undertstanding of types & operations ...\n",
     "# use the variables in the code-block above\n",
     "\n",
-    "# Q1: Without running. What is the output of this line of code?: \n",
-    "print(\"the year is now\" + str(x + y))\n",
-    "# Q2: What does it print out?: \n",
+    "# Q1: Without running. What is the output of this line of code?: the year is now 2023\n",
+    "print(\"the year is now \" + str(x + y))\n",
+    "# Q2: What kind of data-type does str(x + y) this evaluate to? string\n",
     "\n",
     "# Q3: What kind of data-type does this addition result in?\n",
+    "# float\n",
     "x + p\n",
     "\n",
     "# Q4: What kind of data-type does this addition result in?\n",
     "x + p\n",
     "\n",
     "# Q5: What kind of data-type does this addition result in?\n",
+    "# Integer \n",
     "b + x\n"
    ]
   },
@@ -253,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +293,7 @@
        "False"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +314,7 @@
        "7.3"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +335,7 @@
        "5.529999999999999"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +370,7 @@
        "Decimal('5.529999999999999804600747666')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +396,7 @@
        "Decimal('5.53')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +417,7 @@
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +437,7 @@
        "'7.30'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,12 +445,12 @@
    "source": [
     "# with a little extra coding, we can get a monetary amount\n",
     "# check out the 'format' method: https://www.programiz.com/python-programming/methods/built-in/format\n",
-    "format(Decimal(2.00) + Decimal(5.30), '.2f')"
+    "format(Decimal(str(2.00)) + Decimal(str(5.30)), '.2f')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +460,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\saidmf\\Desktop\\TKH\\DS_22\\phase_3\\week_2\\3_28\\basic_python_notes.ipynb Cell 15\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_3/week_2/3_28/basic_python_notes.ipynb#X42sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m Decimal(\u001b[39m1.30\u001b[39;49m) \u001b[39m+\u001b[39;49m \u001b[39m1.20\u001b[39;49m\n",
+      "\u001b[1;32mc:\\Users\\saidmf\\Desktop\\TKH\\DS_22\\phase_3\\week_2\\3_28\\basic_python_notes.ipynb Cell 15\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_3/week_2/3_28/basic_python_notes.ipynb#X42sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# however simple operations no longer work. This is because \"Decimal\" is a different object than `float`\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_3/week_2/3_28/basic_python_notes.ipynb#X42sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m Decimal(\u001b[39m1.30\u001b[39;49m) \u001b[39m+\u001b[39;49m \u001b[39m1.20\u001b[39;49m\n",
       "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'decimal.Decimal' and 'float'"
      ]
     }
@@ -449,9 +480,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.5\n",
+      "5.551115123125783e-17\n",
+      "7.50\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'decimal.Decimal' and 'float'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\saidmf\\Desktop\\TKH\\DS_22\\phase_3\\week_2\\3_28\\basic_python_notes.ipynb Cell 17\u001b[0m in \u001b[0;36m<cell line: 17>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_3/week_2/3_28/basic_python_notes.ipynb#X44sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mformat\u001b[39m(Decimal(\u001b[39mstr\u001b[39m(\u001b[39m5.30\u001b[39m)) \u001b[39m+\u001b[39m Decimal(\u001b[39mstr\u001b[39m(\u001b[39m2.20\u001b[39m)), \u001b[39m'\u001b[39m\u001b[39m.2f\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_3/week_2/3_28/basic_python_notes.ipynb#X44sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m# 7.50\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_3/week_2/3_28/basic_python_notes.ipynb#X44sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_3/week_2/3_28/basic_python_notes.ipynb#X44sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39m# Q4: Without running, what will the following output?\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_3/week_2/3_28/basic_python_notes.ipynb#X44sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39m# print(Decimal(str(5.30)) + Decimal((2.20)))\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_3/week_2/3_28/basic_python_notes.ipynb#X44sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_3/week_2/3_28/basic_python_notes.ipynb#X44sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39m# Q5: Without running, what will the following output?\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_3/week_2/3_28/basic_python_notes.ipynb#X44sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39mprint\u001b[39m(Decimal(\u001b[39mstr\u001b[39;49m(\u001b[39m5.30\u001b[39;49m)) \u001b[39m+\u001b[39;49m \u001b[39m4.00\u001b[39;49m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'decimal.Decimal' and 'float'"
+     ]
+    }
+   ],
    "source": [
     "# Q1: Without running, what will be the result of the following line of code?: \n",
     "print(5.30 + 2.20)\n",
@@ -459,11 +511,12 @@
     "# Q2: Without running, answer the following: will this output 0.0?: \n",
     "print(0.1 + 0.1 + 0.1 - 0.3)\n",
     "\n",
+    "\n",
     "# Q3: Without running, what will the following output?\n",
-    "print(Decimal(5.30) + Decimal(2.20))\n",
+    "print(format(Decimal(str(5.30)) + Decimal(str(2.20)), '.2f'))\n",
     "\n",
     "# Q4: Without running, what will the following output?\n",
-    "print(Decimal(str(5.30)) + Decimal((2.20)))\n",
+    "# print(Decimal(str(5.30)) + Decimal((2.20)))\n",
     "\n",
     "# Q5: Without running, what will the following output?\n",
     "print(Decimal(str(5.30)) + 4.00)"
@@ -506,9 +559,9 @@
     "True-sticky. If anything is true, everything becomes true:\n",
     "\n",
     "```\n",
-    "T and T and F = T\n",
-    "T and T and T and F = T\n",
-    "F and F and T = T\n",
+    "T or T or F = T\n",
+    "T or T or T or F = T\n",
+    "F or F or T = T\n",
     "```\n",
     "\n",
     "### Negations (not) \n",
@@ -526,17 +579,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n",
+      "hello world\n",
+      "hello goodbye\n"
+     ]
+    }
+   ],
    "source": [
-    "#Q1: what does this evaluate to?:\n",
+    "#Q1: what does this evaluate to?: False\n",
     "print(True and True and True and False)\n",
     "\n",
-    "#Q2: what does this evaluate to?:\n",
+    "#Q2: what does this evaluate to?: True\n",
     "print(True or True or True or False)\n",
     "\n",
-    "#Q3: what does this evaluate to?:\n",
+    "#Q3: what does this evaluate to?: True\n",
     "print(not not not not True)\n",
     "\n",
     "#Q4: what does this print out?:\n",
@@ -591,31 +656,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(5):\n",
     "    print(i)\n",
     "# Q1: translate the above for-loop into a while loop\n",
-    "\n",
-    "\n",
-    "for i in range(20, 10, -1):\n",
+    "i = 0\n",
+    "while i < 5:\n",
     "    print(i)\n",
+    "    i += 1\n",
+    "\n",
+    "#for i in range(20, 10, -1):\n",
+    "    #print(i)\n",
     "# Q2: translate the above for-loop into a while loop\n",
+    "\n",
     "\n",
     "i = 2\n",
     "while i < 10:\n",
     "    print(i)\n",
     "    i += 2\n",
     "# Q3: translate the above while-loop this into a for loop\n",
-    "\n",
-    "\n",
-    "i = 0\n",
-    "while i > -10:\n",
+    "for i in range(2, 10, 2):\n",
     "    print(i)\n",
-    "    i -= 1\n",
-    "# Q4:s translate the above while-loop this into a for loop"
+    "\n",
+    "#i = 0\n",
+    "#while i > -10:\n",
+    "    #print(i)\n",
+    "    #i -= 1\n",
+    "# Q4:s translate the above while-loop this into a for loop\n"
    ]
   },
   {
@@ -742,9 +837,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b']\n",
+      "{'Frank', 'Juan', 'Ulysses', 'Yazmin', 'Ahmed', 'Ana'}\n",
+      "False\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'dozen eggs'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\saidmf\\Desktop\\TKH\\DS_22\\phase_3\\week_2\\3_28\\basic_python_notes.ipynb Cell 24\u001b[0m in \u001b[0;36m<cell line: 27>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_3/week_2/3_28/basic_python_notes.ipynb#X32sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m prices\u001b[39m.\u001b[39mpop(\u001b[39m\"\u001b[39m\u001b[39mdozen eggs\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_3/week_2/3_28/basic_python_notes.ipynb#X32sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m \u001b[39m# Q5: what is the output of the following code?\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_3/week_2/3_28/basic_python_notes.ipynb#X32sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m \u001b[39mprint\u001b[39m(prices[\u001b[39m\"\u001b[39;49m\u001b[39mdozen eggs\u001b[39;49m\u001b[39m\"\u001b[39;49m])\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'dozen eggs'"
+     ]
+    }
+   ],
    "source": [
     "lst = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
     "submissions = {\"Ulysses\", \"Juan\", \"Juan\", \"Ahmed\", \"Ahmed\", \"Ahmed\", \"Ana\", \"Frank\", \"Yazmin\", \"Yazmin\"}\n",
@@ -752,22 +868,28 @@
     "\n",
     "# Q1: what is the output of the following code?\n",
     "print(lst[:2])\n",
+    "# [a, b]\n",
     "\n",
     "# Q2: what is the output of the following code?\n",
     "print(submissions)\n",
+    "# {\"Ulysses\", \"Juan\", \"Ahmed\", \"Ana\", \"Frank\", \"Yazmin\"}\n",
     "\n",
     "# Q3: what is the output of the following code?\n",
-    "print(submissions[:2])\n",
+    "# print(submissions[:2])\n",
+    "# ERROR\n",
     "\n",
     "# Q4: what is the output of the following code?\n",
     "print(\"Jazmin\" in submissions)\n",
+    "# False \n",
+    "# INSTANT ACCESS (sets/dictionaries we support instant membership checking) O(1)/O(n) --> lists\n",
     "\n",
     "# inflation\n",
     "prices[\"dozen eggs\"] = 4.00\n",
     "prices.pop(\"dozen eggs\")\n",
     "\n",
     "# Q5: what is the output of the following code?\n",
-    "print(prices[\"dozen eggs\"])"
+    "print(prices[\"dozen eggs\"])\n",
+    "# ERROR: key does not exist"
    ]
   },
   {
@@ -815,20 +937,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4]\n",
+      "[0, 1, 2, 3, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "new_list = []\n",
     "for i in range(5):\n",
     "    new_list.append(i)\n",
     "# Q1: Translate the above loop into list comprehension\n",
-    "\n",
+    "new_list = [i for i in range(5)]\n",
     "\n",
     "new_list = []\n",
     "for i in range(10, 5, -1):\n",
     "    new_list.append(i)\n",
     "# Q2: Translate the above loop into list comprehension\n",
+    "new_list = [i for i in range(10, 5, -1)]\n",
     "\n",
     "new_str = []\n",
     "word = \"hello world\"\n",
@@ -836,14 +968,15 @@
     "    if letter == \"e\" or letter == \"o\":\n",
     "        new_str.append(letter)\n",
     "# Q3: Translate the above loop into list comprehension\n",
-    "\n",
+    "new_str = [letter for letter in word if letter == \"e\" or letter == \"o\"]\n",
     "\n",
     "old_emails = [\"scam@gmail.com\", \"bob@scam.com\", \"realperson@gmail.com\"]\n",
     "new_emails = []\n",
     "for email in old_emails:\n",
     "    if \"scam\" not in email:\n",
     "        new_emails.append(email)\n",
-    "# Q4: Translate the above loop into list comprehension\n"
+    "# Q4: Translate the above loop into list comprehension\n",
+    "new_emails = [email for email in old_emails if \"scam\" not in email]"
    ]
   },
   {
@@ -961,17 +1094,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5321\n"
+     ]
+    }
+   ],
    "source": [
     "# Q1: What is a real life example of a stack?\n",
     "# write answer here\n",
     "\n",
     "# Q2: What is a real life example of a queue?\n",
     "# write answer here\n",
-    "\n",
-    "# Q3: what will be the next element popped from the queue?\n",
     "queue = []\n",
     "\n",
     "queue.append(\"a\")\n",
@@ -979,8 +1118,8 @@
     "queue.append(\"c\")\n",
     "\n",
     "queue.pop(0)\n",
+    "# Q3: what will be the next element popped from the queue?\n",
     "\n",
-    "# Q4: what will be the next element popped from the stack?\n",
     "stack = []\n",
     "\n",
     "stack.append(\"a\")\n",
@@ -988,6 +1127,7 @@
     "stack.append(\"c\")\n",
     "\n",
     "stack.pop()\n",
+    "# Q4: what will be the next element popped from the stack?\n",
     "\n",
     "# Q5: What is the result of this code?\n",
     "from collections import namedtuple\n",
