--- a/tech_patterns/sliding-window.ipynb
+++ b/tech_patterns/sliding-window.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,13 +40,14 @@
     "        for j in range(i, i + k):\n",
     "            total += lst[j]\n",
     "        new_lst.append(total/k)\n",
+    "\n",
     "    \n",
     "    return new_lst"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.4978017807006836\n"
+      "0.34764790534973145\n"
      ]
     }
    ],
@@ -84,6 +85,40 @@
     "end = time.time()\n",
     "\n",
     "print(end - start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2.0,\n",
+       " 3.6666666666666665,\n",
+       " 2.3333333333333335,\n",
+       " 3.0,\n",
+       " 1.3333333333333333,\n",
+       " 4.333333333333333,\n",
+       " 3.6666666666666665]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from cProfile import Profile\n",
+    "from pstats import Stats\n",
+    "\n",
+    "def test1():\n",
+    "    return brute_force([1, 3, 2, 6, -1, 4, 1, 8, 2], 3)\n",
+    "\n",
+    "prof = Profile()\n",
+    "prof.runcall(test1)\n",
+    "stats = Stats(prof)"
    ]
   },
   {
@@ -116,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,6 +195,38 @@
     "end = time.time()\n",
     "\n",
     "print(end - start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2.0,\n",
+       " 3.6666666666666665,\n",
+       " 2.3333333333333335,\n",
+       " 3.0,\n",
+       " 1.3333333333333333,\n",
+       " 4.333333333333333,\n",
+       " 3.6666666666666665]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from cProfile import Profile\n",
+    "\n",
+    "def test2():\n",
+    "    return sliding_window([1, 3, 2, 6, -1, 4, 1, 8, 2], 3)\n",
+    "\n",
+    "prof = Profile()\n",
+    "prof.runcall(test2)"
    ]
   },
   {
