--- a/phase_3/week_3/4_4/advanced_python_notes.ipynb
+++ b/phase_3/week_3/4_4/advanced_python_notes.ipynb
@@ -17,27 +17,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Trees\n",
-    "\n",
-    "A tree is an object composed of nodes & connections. We start from a root-tree and then generate branches that lead to children. Abstractly, think of this as a family-tree, where the great-grandparents are at the top, the grandparents are a level below, the parents are at the 3rd level, and then finally the bottom-most nodes constitute the children.\n",
-    "\n",
-    "For now, we will not discuss this concept further, but as it is useful for engineering tasks, we will be discussing in the Sunday technical interview sessions.\n",
-    "\n",
-    "https://www.tutorialspoint.com/python_data_structure/python_binary_tree.htm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Collection Data Types\n",
     "\n",
     "### NamedTuple\n",
@@ -68,10 +47,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5321\n"
+     ]
+    }
+   ],
+   "source": [
+    "# What is the result of this code?\n",
+    "from collections import namedtuple\n",
+    "\n",
+    "Cooridinate = namedtuple(\"Cooridinate\", [\"x\", \"y\", \"z\"])\n",
+    "\n",
+    "p1 = Cooridinate(\"53\", 20, \"19\")\n",
+    "p2 = Cooridinate(\"21\", 19, \"28\")\n",
+    "\n",
+    "print(p1.x + p2.x)"
+   ]
   },
   {
    "attachments": {},
@@ -156,7 +153,6 @@
    "outputs": [],
    "source": [
     "# Real Python example\n",
-    "\n",
     "def my_decorator(func):\n",
     "    def wrapper():\n",
     "        print(\"hello world!\")\n",
@@ -320,8 +316,7 @@
     "\n",
     "Now even though there is \"langauge\" in the name, we do not consider this to be a \"formal\" programming language. This is because, at its heart, HTML was engineered to represent information in some structured format rather introduce logical structures or data manipulation. \n",
     "\n",
-    "This fact make websites a prime candidate for data-gathering. There is some sort of information that we want to extract, it just unfortunately isn't immediately available to us and furthermore most likely unstructured.\n",
-    "\n"
+    "This fact make websites a prime candidate for data-gathering. There is some sort of information that we want to extract, it just unfortunately isn't immediately available to us and furthermore most likely unstructured."
    ]
   },
   {
