Added tech interview material

--- a/phase_3/week_3/4_4/advanced_python_exercise.ipynb
+++ b/phase_3/week_3/4_4/advanced_python_exercise.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## Exercise\n",
     "\n",
-    "Complete the web-scraping exercise from the notes. Modify your code to save the population of each country into a pandas dataframe, and return the top 5 countries in terms of population."
+    "Complete the web-scraping exercise from the notes. Modify your code to save the population & capital of each country into a pandas dataframe, and return the top 5 countries in terms of population."
    ]
   },
   {
