--- a/tech_patterns/dfs.ipynb
+++ b/tech_patterns/dfs.ipynb
@@ -90,16 +90,17 @@
    "source": [
     "def dfs(root):\n",
     "    stack = []\n",
+    "    seen = set()\n",
     "    stack.append(root)\n",
     "    seen.add(root)\n",
     "\n",
     "    while len(stack) != 0:\n",
-    "        next_cell = \n",
-    "        left_child = \n",
+    "        node = stack.pop()\n",
+    "        neighbors = get_neighbors(node)\n",
     "        for n in neighbors:\n",
-    "            # if n is 1 and (n[0], n[1]) not in seen,\n",
-    "                # add to queue\n",
-    "                # add to queue"
+    "            if n not in seen:\n",
+    "                stack.append(n)\n",
+    "                seen.add(n)"
    ]
   },
   {
