--- a/tech_patterns/bfs.ipynb
+++ b/tech_patterns/bfs.ipynb
@@ -108,7 +108,7 @@
     "    1. In each iteration, first count the elements in the queue (let’s call it levelSize). We will have these many nodes in the current level.\n",
     "    2. Next, remove levelSize nodes from the queue and push their value in an array to represent the current level.\n",
     "    3. After removing each node from the queue, insert both of its children into the queue.\n",
-    "    4. If the queue is not empty, repeat from step 3 for the next level."
+    "    4. If the queue is not empty, repeat the loop"
    ]
   },
   {
@@ -146,14 +146,23 @@
     "    # seen = set()\n",
     "    # seen.add(root)\n",
     "    levels = []\n",
+    "    # while the queue is not empty\n",
     "    while len(queue) != 0:\n",
+    "\n",
+    "        # get the number of children nodes at the level\n",
     "        level_size = len(queue)\n",
     "        sub_level = []\n",
+    "\n",
+    "        # append all children nodes into a sub-array\n",
     "        for _ in range(level_size):\n",
     "            node = queue.pop(0)\n",
     "            sub_level.append(node.val)\n",
+    "\n",
+    "            # ge the children of these children\n",
     "            left_child = node.left\n",
     "            right_child = node.right\n",
+    "\n",
+    "            # if they are not None, append them to the queue\n",
     "            if left_child is not None:\n",
     "                queue.append(left_child)\n",
     "            if right_child is not None:\n",
