--- a/phase_3/week_3/4_3/sprint2_notes.ipynb
+++ b/phase_3/week_3/4_3/sprint2_notes.ipynb
@@ -959,9 +959,9 @@
     "\n",
     "While we should continue applying our normalizations, we will progress to selecting features.\n",
     "\n",
-    "Forward Selection: Generate your model with ALL features, and hand-pick features to delete by checking collinearity & p-values \n",
+    "Forward Selection: Generate your model with ALL features, and hand-pick features to add by checking collinearity & p-values \n",
     "\n",
-    "Backward Selection: Generate your model with ONE features, and hand-pick features to add by checking collinearity & p-values.\n",
+    "Backward Selection: Generate your model with ONE features, and hand-pick features to delete by checking collinearity & p-values.\n",
     "\n",
     "Mixed Selection: Generate your model with ONE features, and hand-pick features to add by checking collinearity & p-values. Iteratively decide to remove features as well"
    ]
