--- a/phase_3/week_4/4_10/sprint3_notes.ipynb
+++ b/phase_3/week_4/4_10/sprint3_notes.ipynb
@@ -2008,8 +2008,10 @@
     "\n",
     "estate_clean = estate.drop(labels=[\"X1 transaction date\", \"X5 latitude\", \"X6 longitude\"], axis=1)\n",
     "estate_clean.columns = [\"id\", \"age\", \"distance_to_mrt\", \"conv_stores\", \"price_unit_area\"]\n",
-    "s\n",
-    "estate_clean = estate_clean[(np.abs(stats.zscore(estate_clean[\"price_unit_area\"])) < 3)]"
+    "\n",
+    "estate_clean = estate_clean[(np.abs(stats.zscore(estate_clean[\"price_unit_area\"])) < 3)]\n",
+    "\n",
+    "# implement model here!"
    ]
   },
   {
