Added phase 3 material

--- a/phase_3/week_3/4_3/sprint2_notes.ipynb
+++ b/phase_3/week_3/4_3/sprint2_notes.ipynb
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +910,7 @@
        "0.018565472435562058"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +919,10 @@
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "reg = LinearRegression()\n",
+    "# trains your model (calculus & linear algebra) --> finds coefficients to minimize error\n",
     "reg.fit(X_train, y_train)\n",
+    "\n",
+    "# check out how accurate your model\n",
     "reg.score(X_train, y_train)\n",
     "\n",
     "# R2 of 1%..."
@@ -927,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -936,14 +939,12 @@
        "-0.010275757722057577"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_pred = reg.predict(X_test).reshape(-1, 1)\n",
-    "\n",
     "reg.score(X_test, y_test)\n",
     "\n",
     "# but in reality! R2 of -0.04????\n",
@@ -1576,7 +1577,7 @@
    "source": [
     "## Try it Yourself!\n",
     "\n",
-    "Apply the same workflow to the following dataset that descriptions real estate in Taiwan: https://archive.ics.uci.edu/ml/datasets/Real+estate+valuation+data+set.\n",
+    "Apply the same workflow to the following dataset that descriptions real estate in Singapore: https://archive.ics.uci.edu/ml/datasets/Real+estate+valuation+data+set.\n",
     "\n",
     "Aim to generate a linear regression model of optimal accuracy. Compare the accuracy to a LASSO model."
    ]
