--- a/phase_3/week_5/4_18/sql_review_exercise.ipynb
+++ b/phase_3/week_5/4_18/sql_review_exercise.ipynb
@@ -55,6 +55,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "write answer here"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Q3 Basic Queries\n",
     "\n",
     "**warehouse**   \n",
