--- a/phase_3/week_5/4_18/sql_review_notes.ipynb
+++ b/phase_3/week_5/4_18/sql_review_notes.ipynb
@@ -153,7 +153,7 @@
     "\tSAVEPOINT undo_change;\n",
     "\tUPDATE inventory SET store_id = 2 WHERE inventory_id = 4581;\n",
     "\t-- woops, undo\n",
-    "\tROLLBACK;\n",
+    "\tROLLBACK TO undo_change;\n",
     "COMMIT;"
    ]
   },
