Added phase 3 structure

--- a/phase_3/week_7/5_2/sqlalchemy_review.ipynb
+++ b/phase_3/week_7/5_2/sqlalchemy_review.ipynb
@@ -189,11 +189,11 @@
     "# this is better expressed with a context manager \n",
     "with conn.cursor() as cursor:\n",
     "    # query 1\n",
-    "    cur.execute(\"SELECT * FROM mytable\")\n",
+    "    cursor.execute(\"SELECT * FROM mytable\")\n",
     "    row1 = cur.fetchone()\n",
     "\n",
     "    # query 2\n",
-    "    cur.execute(\"SELECT * FROM othertable\")\n",
+    "    cursor.execute(\"SELECT * FROM othertable\")\n",
     "    row1 = cur.fetchone()"
    ]
   },
@@ -225,7 +225,7 @@
     "        cur.execute(\"INSERT INTO mytable (column1, column2) VALUES (1, 'hello')\")\n",
     "        cur.execute(\"UPDATE mytable SET column2 = 'world' WHERE column1 = 1\")\n",
     "\n",
-    "        # Step 4: Commit the transaction\n",
+    "        # commit the transaction\n",
     "        conn.commit()\n",
     "    except Exception as e:\n",
     "        conn.rollback()\n",
@@ -334,10 +334,13 @@
     "session = Session()\n",
     "\n",
     "# insert data via your objects\n",
-    "row1 = MyTable(name='Alice', age=25)\n",
-    "row2 = MyTable(name='Bob', age=30)\n",
-    "session.add_all([row1, row2])\n",
-    "session.commit()"
+    "try:\n",
+    "    row1 = MyTable(name='Alice', age=25)\n",
+    "    row2 = MyTable(name='Bob', age=30)\n",
+    "    session.add_all([row1, row2])\n",
+    "    session.commit()\n",
+    "except Exception as e:\n",
+    "    session.rollback()"
    ]
   },
   {
