--- a/phase_3/week_9/5_15/case_study_wine.ipynb
+++ b/phase_3/week_9/5_15/case_study_wine.ipynb
@@ -261,7 +261,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prescriptive Data Analytics"
+    "## Prescriptive Data Analytics\n",
+    "\n",
+    "1. What "
    ]
   }
  ],
