Added phase 3 material

--- a/phase_3/week_8/5_9/dashboard_notes.ipynb
+++ b/phase_3/week_8/5_9/dashboard_notes.ipynb
@@ -5,6 +5,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Decision Trees\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Forests\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Dashboard Engineering\n",
     "\n"
    ]
